[package]
name = "rust-bg-muter"
version = "1.0.0"
edition = "2021"
authors = ["Background Muter Team"]
description = "A high-performance Windows application to mute background applications"
license = "MIT"
repository = "https://github.com/username/rust-bg-muter"

[dependencies]
# Windows API bindings
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "implement",
]}

# GUI framework
eframe = { version = "0.29", features = ["persistence"] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }

# System tray
tray-icon = "0.19"

# Image handling for tray icon
image = "0.25"

# Serialization for config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime for background tasks
tokio = { version = "1.40", features = ["rt-multi-thread", "sync", "time", "macros"] }

# Cross-thread communication
crossbeam-channel = "0.5"

# Logging
log = "0.4"
env_logger = "0.11"

# Directories for config storage
dirs = "5.0"

# Once cell for lazy statics
once_cell = "1.20"

# Parking lot for better mutexes
parking_lot = "0.12"

[build-dependencies]
winres = "0.1"
image = "0.25"
ico = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"

[[bin]]
name = "bg-muter"
path = "src/main.rs"

[package.metadata.winres]
OriginalFilename = "bg-muter.exe"
ProductName = "Background Muter"
FileDescription = "Mute background applications automatically"
