[package]
name = "rust-bg-muter"
version = "1.1.0"
edition = "2021"
authors = ["Background Muter Team"]
description = "A lightweight Windows application to mute background applications"
license = "MIT"
repository = "https://github.com/username/rust-bg-muter"

[dependencies]
# Windows API bindings
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_UI_WindowsAndMessaging",
]}

# System tray (lightweight)
tray-icon = "0.19"

# Image handling for tray icon (minimal features)
image = { version = "0.25", default-features = false, features = ["png"] }

# Serialization for config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cross-thread communication (lightweight)
crossbeam-channel = "0.5"

# Logging (minimal)
log = "0.4"
env_logger = { version = "0.11", default-features = false, features = ["auto-color"] }

# Directories for config storage
dirs = "5.0"

# Parking lot for better mutexes
parking_lot = "0.12"

[build-dependencies]
winres = "0.1"
image = { version = "0.25", default-features = false, features = ["png"] }
ico = "0.3"

[profile.release]
opt-level = "z"      # Optimize for size
lto = true           # Link-time optimization
codegen-units = 1    # Single codegen unit for better optimization
panic = "abort"      # Abort on panic (smaller binary)
strip = true         # Strip all symbols

[profile.dev]
opt-level = 1        # Some optimization in dev for faster iteration

[[bin]]
name = "bg-muter"
path = "src/main.rs"

[package.metadata.winres]
OriginalFilename = "bg-muter.exe"
ProductName = "Background Muter"
FileDescription = "Mute background applications automatically"
